Fixed demo layout issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -303,10 +303,7 @@ footer {
   top: 0;
   left: 0;
   z-index: 0;
-  padding: 5px;
-  border: 1px solid black;
-  border-radius: 5px;
-  background-color: #FAEBD7;
+  padding: 0;
 }
 
 .justice-head {
@@ -314,7 +311,7 @@ footer {
   top: 0;
   left: 0;
   z-index: 1;
-  padding: 5px;
+  padding: 0;
 }
 
 .justice-name {
